SAK-2438 Fix for error in profile.css Also changed valign to top,
git-svn-id: https://source.sakaiproject.org/svn/trunk/sakai@3273 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile/profile-app/src/webapp/css/profile.css
+++ b/profile/profile-app/src/webapp/css/profile.css
@@ -1,7 +1,7 @@
 /* CSS for profile tool */
 
 .editProfile{
- vertical-align: bottom
+ vertical-align: top;
  text-align:left;
  }
  
